...
}

export default function DashboardScreen() {
  const { isDarkMode } = useTheme();
  const styles = useMemo(() => getStyles(isDarkMode), [isDarkMode]);
  return (
    <SafeAreaView style={styles.container} testID="index-screen">
      <Dashboard />
    </SafeAreaView>
  );
}

